@@ -1,4 +1,4 @@
-PRJ_VER=0.7.995
+PRJ_VER=0.8.0
 SUMMARY= Fixed Bug 733540, 738958; Renamed UseUninstall to ManageUninstall; Revised Zanata support
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=733540, 738958
@@ -11,7 +11,10 @@ REDHAT_BUGZILLA=733540, 738958
 - UseUninstall has renamed as ManageUninstall
 - ManageMaintainerTargets: Reveal MAINTAINER_UPLOAD_COMMAND
 - ManageTranslation: Adopt zanata python client 1.3, arguments are redesigned.
+  + Change target: from "translations" to "gmo_files"
+  + Add targets: zanata_push, zanata_push_trans, zanata_pull_trans
   + Add argument: ALL_FOR_PUSH, ALL_FOR_PUSH_TRANS and ALL_FOR_PULL
   + Add argument: OPTIONS for passing arguments.
-
+- ManageReleaseOnFedora: Now default to build against candidate repos,
+  unless _CANDIDATE_PREFERRED is set to "0".
 
